--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on Github at <https://github.com/Mari
 
 dependencies:
 - base >= 4.7 && < 5
+- singletons >= 2.3.1
 
 library:
   source-dirs: src
